// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - QuoteBubble doesn't show copy to clipboard button when it's disabled 1`] = `
.c0 {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

.c1 {
  margin: 0;
  top: 0;
  left: 0;
  position: absolute;
  padding: 1.4rem 1.8rem;
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Hello! I'm Taylor Swift!
  </p>
  <SpeechBubble
    variant="speech"
  />
</section>
`;

exports[`COMPONENT - QuoteBubble renders correct defaults when no props are provieded 1`] = `
.c0 {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

.c1 {
  margin: 0;
  top: 0;
  left: 0;
  position: absolute;
  padding: 1.4rem 1.8rem;
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Daily in 5 minutes and I'm still not sure what tot say...
  </p>
  <SpeechBubble
    variant="speech"
  />
  <CopyButton
    onCopy={[Function]}
  />
</section>
`;

exports[`COMPONENT - QuoteBubble renders correctly thought variant of bubble 1`] = `
.c0 {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

.c1 {
  margin: 0;
  top: 0;
  left: 0;
  position: absolute;
  padding: 1.4rem 1.8rem;
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Hello! I'm Taylor Swift!
  </p>
  <SpeechBubble
    variant="thought"
  />
</section>
`;

exports[`COMPONENT - QuoteBubble renders custom quote 1`] = `
.c0 {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

.c1 {
  margin: 0;
  top: 0;
  left: 0;
  position: absolute;
  padding: 1.4rem 1.8rem;
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Hello! I'm Taylor Swift!
  </p>
  <SpeechBubble
    variant="speech"
  />
  <CopyButton
    onCopy={[Function]}
  />
</section>
`;
